--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,109 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    android:layout_marginTop="@dimen/largeMargin"
     android:layout_marginLeft="@dimen/largeMargin"
     android:layout_marginRight="@dimen/largeMargin"
-
-    android:elevation="@dimen/elevation"
-    android:background="@color/colorTaskBackground"
+    android:layout_marginTop="@dimen/largeMargin"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:selectableItemBackground">
+    android:foreground="?android:selectableItemBackground"
+    app:cardCornerRadius="18dp"
+    app:cardElevation="8dp"
+    app:strokeWidth="0dp"
+    android:backgroundTint="@color/cardBackground">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/icon"
-        android:layout_width="@dimen/taskIconSize"
-        android:layout_height="@dimen/taskIconSize"
-        android:layout_margin="@dimen/largeMargin"
-        android:tint="@color/colorIconTint"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/tasks"
-        android:layout_margin="@dimen/largeMargin"
-        style="@style/ItemTitleStyle"
+        android:padding="@dimen/largePadding">
 
-        app:layout_constraintLeft_toRightOf="@id/icon"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <!-- Іконка задачі -->
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/icon"
+            android:layout_width="@dimen/taskIconSize"
+            android:layout_height="@dimen/taskIconSize"
+            android:tint="@color/colorIconTint"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/scoreTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/scoreViewHeight"
+        <!-- Назва -->
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/tasks"
+            android:textColor="@color/textPrimary"
+            style="@style/ItemTitleStyle"
+            android:layout_marginStart="12dp"
+            app:layout_constraintLeft_toRightOf="@id/icon"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/icon"/>
 
-        android:layout_margin="@dimen/largeMargin"
-        style="@style/ScoreTextStyle"
-        android:textAlignment="textStart"
+        <!-- Очки -->
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/scoreTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/scoreViewHeight"
+            android:textColor="@color/colorAccent"
+            style="@style/ScoreTextStyle"
+            android:layout_marginTop="@dimen/mediumMargin"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title"/>
 
-        app:layout_constraintTop_toTopOf="@id/taskSuccessButton"
-        app:layout_constraintBottom_toBottomOf="@id/taskSuccessButton"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        <!-- Кнопка: Завдання виконано -->
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/taskSuccessButton"
+            android:layout_width="@dimen/roundButtonSize"
+            android:layout_height="@dimen/roundButtonSize"
+            android:src="@drawable/ic_task_success"
+            android:tint="@color/colorSuccess"
+            android:background="?selectableItemBackgroundBorderless"
+            android:contentDescription="@string/task_set_success"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="@dimen/mediumMargin"/>
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/taskSuccessButton"
-        android:layout_width="@dimen/roundButtonSize"
-        android:layout_height="@dimen/roundButtonSize"
+        <!-- Кнопка: Пропустити -->
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/taskSkipButton"
+            android:layout_width="@dimen/roundButtonSize"
+            android:layout_height="@dimen/roundButtonSize"
+            android:src="@drawable/ic_task_skip"
+            android:tint="@color/colorSecondaryDark"
+            android:background="?selectableItemBackgroundBorderless"
+            android:contentDescription="@string/task_set_skip"
+            android:layout_marginEnd="@dimen/smallMargin"
+            app:layout_constraintRight_toLeftOf="@id/taskSuccessButton"
+            app:layout_constraintTop_toTopOf="@id/taskSuccessButton"/>
 
-        android:src="@drawable/ic_task_success"
-        android:background="?selectableItemBackgroundBorderless"
-        android:tint="@color/colorSuccess"
-        android:layout_marginTop="@dimen/largeMargin"
-        android:contentDescription="@string/task_set_success"
+        <!-- Кнопка: Невдача -->
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/taskFailButton"
+            android:layout_width="@dimen/roundButtonSize"
+            android:layout_height="@dimen/roundButtonSize"
+            android:src="@drawable/ic_task_fail"
+            android:tint="@color/colorFail"
+            android:background="?selectableItemBackgroundBorderless"
+            android:contentDescription="@string/task_set_failed"
+            android:layout_marginEnd="@dimen/smallMargin"
+            app:layout_constraintRight_toLeftOf="@id/taskSkipButton"
+            app:layout_constraintTop_toTopOf="@id/taskSkipButton"/>
 
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintRight_toRightOf="parent"/>
+        <!-- Popup -->
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/taskPopUp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            android:padding="@dimen/largePadding"
+            style="@style/TaskPopUpStyle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/taskSkipButton"
-        android:layout_width="@dimen/roundButtonSize"
-        android:layout_height="@dimen/roundButtonSize"
-
-        android:src="@drawable/ic_task_skip"
-        android:background="?selectableItemBackgroundBorderless"
-        android:layout_marginEnd="@dimen/smallMargin"
-        android:tint="@color/colorIconTint"
-        android:contentDescription="@string/task_set_skip"
-
-        app:layout_constraintTop_toTopOf="@id/taskSuccessButton"
-        app:layout_constraintBottom_toBottomOf="@id/taskSuccessButton"
-        app:layout_constraintRight_toLeftOf="@id/taskSuccessButton"/>
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/taskFailButton"
-        android:layout_width="@dimen/roundButtonSize"
-        android:layout_height="@dimen/roundButtonSize"
-
-        android:src="@drawable/ic_task_fail"
-        android:background="?selectableItemBackgroundBorderless"
-        android:layout_marginEnd="@dimen/smallMargin"
-        android:contentDescription="@string/task_set_failed"
-
-        app:layout_constraintTop_toTopOf="@id/taskSuccessButton"
-        app:layout_constraintBottom_toBottomOf="@id/taskSuccessButton"
-        app:layout_constraintRight_toLeftOf="@id/taskSkipButton"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/taskPopUp"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="gone"
-
-        style="@style/TaskPopUpStyle"
-        android:padding="@dimen/largePadding"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
